[package]
name = "medge-dll"
version = "0.1.0"
edition = "2021"
description = "Loads the mmultiplayer.dll into the process that has loaded it and then unloads itself."

[lib]
crate-type = ["cdylib"]
name = "AgPerfMon"

[dependencies]
winapi = "0.2.7"
user32-sys = "0.2.0"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]

[build]
target="i686-pc-windows-msvc"
