[package]
name = "memp-loader"
version = "0.1.0"
edition = "2021"
description = """
Loads the mmultiplayer.dll into the process that has loaded it and then unloads itself.
This is based on work by Sam Rambles:
https://samrambles.com/guides/window-hacking-with-rust/creating-a-dll-with-rust/index.html"""

[lib]
crate-type = ["cdylib"]
name = "AgPerfMon"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]
